--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6E6E6D</color>
-    <color name="colorPrimaryDark">#7F7F7E</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#0D47A1</color>
     <color name="colorAccent">#FEFFFD</color>
-    <color name="colorGreyDark">#6E6E6D</color>
+    <color name="colorGreyDark">#0D47A1</color>
     <color name="colorGreyLight">#CBCCCA</color>
-    <color name="colorGreen">#9ABA59</color>
-    <color name="colorGreenLight">#E5FFB0</color>
+    <color name="colorGreen">#2196F3</color>
+    <color name="colorGreenLight">#0D47A1</color>
     <color name="colorWhite">#FEFFFD</color>
 </resources>
