--- a/app/src/main/res/layout/content_virtual_pharmacist.xml
+++ b/app/src/main/res/layout/content_virtual_pharmacist.xml
@@ -26,7 +26,6 @@
         android:id="@+id/llMsgCompose"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGreen"
         android:orientation="horizontal"
         android:weightSum="3" >
 
@@ -41,13 +40,17 @@
             android:paddingRight="6dp"
             android:hint="Type message"
             android:autoText="false"
-            android:textColorHint="@color/colorGreyLight" />
+            android:textColorHint="@color/colorGreyLight"
+            android:layout_marginRight="10dp"
+            />
 
-        <Button
+        <ImageButton
             android:id="@+id/sendButton"
-            android:layout_width="35dp"
-            android:background="@drawable/send_button"
-            android:layout_height="35dp" />
+            android:layout_width="50dp"
+            android:background="@drawable/round_button"
+            android:src="@drawable/ic_send_white"
+            android:scaleType="centerInside"
+            android:layout_height="50dp" />
     </LinearLayout>
 
 </LinearLayout>
